--- a/mole.css
+++ b/mole.css
@@ -1,9 +1,69 @@
 /* Your code here */
 
+.wgs {
+  position: relative;
+  width: 320px;
+  height: 241px;
+  display: inline-block;
+  overflow: hidden;
+}
+.wgs__mole-head{
+  position: absolute;
+  width: 188px;
+  height: 178px;
+  left: 54.5px;
+  transition: margin-top 0.25s;
+}
+.wgs__mole-pile {
+  position:absolute;
+  width: 320px;
+  height: 110px;
+  bottom: 0;
+}
+
+.wgs__mole-head--hidden {
+  position: absolute;
+  width: 188px;
+  margin-top: 241px;
+  height: 178px;
+  left: 54.5px;
+
+}
+.wgs__mole-head--whacked {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 188px;
+  height: 178px;
+  background-color: rgba(255, 255, 255, 0.6);
+  opacity: 1;
+  pointer-events: none;
+  animation: shockwave 0.5s ease-out forwards;
+  
+}
+@keyframes shockwave {
+  0% {
+    transform: translate(-50%, -50%) scale(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 0;
+  }
+}
+
+
+.pf {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 50% 50%;
+}
+
 
 
 /* UNCOMMENT THE CODE BELOW WHEN DIRECTED */
-/* .sb {
+.sb {
   background-color: cornflowerblue;
   border-bottom: 1px solid #645DED;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
@@ -12,17 +72,17 @@
   font-size: 30px;
   margin-bottom: 50px;
   padding: 10px 20px;
-} */
+} 
 
-/* .sb__mole-counter {
+.sb__mole-counter {
   flex: 1 0 0;
   text-align: right;
-} */
+}
 
-/* .sb__score-holder {
+.sb__score-holder {
   flex: 1 0 0;
-} */
+} 
 
-/* .sb__game-over--hidden {
+.sb__game-over--hidden {
   display: none;
-} */
+} 
